--- a/package.json
+++ b/package.json
@@ -10,31 +10,34 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@skeletonlabs/skeleton": "2.10.2",
+		"@skeletonlabs/tw-plugin": "0.4.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tailwindcss/forms": "0.5.9",
+		"@tailwindcss/typography": "0.5.15",
 		"@types/eslint": "^9.6.0",
+		"autoprefixer": "10.4.20",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"postcss": "8.4.47",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
-		"vite": "^5.0.3",
-		"postcss": "8.4.47",
-		"autoprefixer": "10.4.20",
 		"tailwindcss": "3.4.14",
-		"@skeletonlabs/skeleton": "2.10.2",
-		"@skeletonlabs/tw-plugin": "0.4.0",
-		"vite-plugin-tailwind-purgecss": "0.3.3",
-		"@tailwindcss/typography": "0.5.15",
-		"@tailwindcss/forms": "0.5.9"
+		"vite": "^5.0.3",
+		"vite-plugin-tailwind-purgecss": "0.3.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"@floating-ui/dom": "1.6.11",
+		"d3": "^7.9.0",
 		"date-fns": "^4.1.0",
+		"nprogress": "^0.2.0",
 		"pocketbase": "^0.21.5"
 	}
 }
